[R] publish org files

--- a/html/linux.html
+++ b/html/linux.html
@@ -16,32 +16,32 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgae10c59">1. vmlinuz</a></li>
-<li><a href="#org75a02d3">2. linux io/storage stack</a></li>
-<li><a href="#org48c18a8">3. program exit code</a></li>
-<li><a href="#org33fd31c">4. dp8网卡问题</a></li>
-<li><a href="#org8565ed0">5. 修改资源限制</a></li>
-<li><a href="#orgb4c2402">6. CPU温度过高</a></li>
-<li><a href="#orga880ad9">7. sync hangup</a></li>
-<li><a href="#org61f98b4">8. upgrade glibc</a></li>
-<li><a href="#orgf7956a9">9. 允许不在tty上执行sudo</a></li>
-<li><a href="#org45df36d">10. ssh proxy</a></li>
-<li><a href="#orgb7662fa">11. 修改最大打开文件句柄数</a></li>
-<li><a href="#org32b4116">12. apt-get hang</a></li>
-<li><a href="#org7784c0f">13. syslog on cpu</a>
+<li><a href="#orgfada14f">1. vmlinuz</a></li>
+<li><a href="#orgc4abe4a">2. linux io/storage stack</a></li>
+<li><a href="#orgf0dd8c6">3. program exit code</a></li>
+<li><a href="#org791c7cf">4. dp8网卡问题</a></li>
+<li><a href="#org0f2b28f">5. 修改资源限制</a></li>
+<li><a href="#org4505f17">6. CPU温度过高</a></li>
+<li><a href="#orgcb065fd">7. sync hangup</a></li>
+<li><a href="#orgd96af61">8. upgrade glibc</a></li>
+<li><a href="#orgb061942">9. 允许不在tty上执行sudo</a></li>
+<li><a href="#org1a1518d">10. ssh proxy</a></li>
+<li><a href="#orgd90fedc">11. 修改最大打开文件句柄数</a></li>
+<li><a href="#org430e389">12. apt-get hang</a></li>
+<li><a href="#orgb6e8f24">13. syslog on cpu</a>
 <ul>
-<li><a href="#org02cb2ac">13.1. Core power limit notifaction</a></li>
-<li><a href="#org99c9c28">13.2. Package power limit notification</a></li>
-<li><a href="#org67556d7">13.3. below trip temperature. Throttling disabled</a></li>
+<li><a href="#orgba33867">13.1. Core power limit notifaction</a></li>
+<li><a href="#orgb85079c">13.2. Package power limit notification</a></li>
+<li><a href="#orgd29546f">13.3. below trip temperature. Throttling disabled</a></li>
 </ul>
 </li>
-<li><a href="#org0cae832">14. linux kernel map</a></li>
-<li><a href="#org105a3a0">15. ssh access denied</a></li>
+<li><a href="#org6fde235">14. linux kernel map</a></li>
+<li><a href="#org6d163b0">15. ssh access denied</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgae10c59" class="outline-2">
-<h2 id="orgae10c59"><span class="section-number-2">1</span> vmlinuz</h2>
+<div id="outline-container-orgfada14f" class="outline-2">
+<h2 id="orgfada14f"><span class="section-number-2">1</span> vmlinuz</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 vmlinuz是可引导的、压缩的内核。"vm"代表"Virtual Memory"。Linux 支持虚拟内存，不像老的操作系统比如DOS有640KB内存的限制。Linux能够使用硬盘空间作为虚拟内存，因此得名"vm"。vmlinuz是可执行的Linux内核，它位于/boot/vmlinuz，它一般是一个软链接。vmlinux是未压缩的内核，vmlinuz是vmlinux的压缩文件。
@@ -57,8 +57,8 @@ zImage(vmlinuz)和bzImage(vmlinuz)都是用gzip压缩的。它们不仅是一个
 </div>
 </div>
 
-<div id="outline-container-org75a02d3" class="outline-2">
-<h2 id="org75a02d3"><span class="section-number-2">2</span> linux io/storage stack</h2>
+<div id="outline-container-orgc4abe4a" class="outline-2">
+<h2 id="orgc4abe4a"><span class="section-number-2">2</span> linux io/storage stack</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <img src="images/Linux-io-stack-diagram.png" alt="Linux-io-stack-diagram.png" /> <img src="images/Linux-storage-stack-diagram.png" alt="Linux-storage-stack-diagram.png" />
@@ -66,8 +66,8 @@ zImage(vmlinuz)和bzImage(vmlinuz)都是用gzip压缩的。它们不仅是一个
 </div>
 </div>
 
-<div id="outline-container-org48c18a8" class="outline-2">
-<h2 id="org48c18a8"><span class="section-number-2">3</span> program exit code</h2>
+<div id="outline-container-orgf0dd8c6" class="outline-2">
+<h2 id="orgf0dd8c6"><span class="section-number-2">3</span> program exit code</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 首先看下面一段Java程序
@@ -122,8 +122,8 @@ exit(code)
 </div>
 </div>
 
-<div id="outline-container-org33fd31c" class="outline-2">
-<h2 id="org33fd31c"><span class="section-number-2">4</span> dp8网卡问题</h2>
+<div id="outline-container-org791c7cf" class="outline-2">
+<h2 id="org791c7cf"><span class="section-number-2">4</span> dp8网卡问题</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 当时dp8的网络流量从一个非常大的值变为非常小的值，检查/proc/net/netstat，以下几个统计数值dp8和其他机器差距较大（相差1-2个数量级）：
@@ -180,8 +180,8 @@ dp@dp8:~$ dmesg | grep eth0
 </div>
 </div>
 
-<div id="outline-container-org8565ed0" class="outline-2">
-<h2 id="org8565ed0"><span class="section-number-2">5</span> 修改资源限制</h2>
+<div id="outline-container-org0f2b28f" class="outline-2">
+<h2 id="org0f2b28f"><span class="section-number-2">5</span> 修改资源限制</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 临时的修改方式可以通过ulimit来进行修改，也可以通过修改文件/etc/security/limits.conf来永久修改
@@ -194,8 +194,8 @@ hadoop - nproc 40960
 </div>
 </div>
 
-<div id="outline-container-orgb4c2402" class="outline-2">
-<h2 id="orgb4c2402"><span class="section-number-2">6</span> CPU温度过高</h2>
+<div id="outline-container-org4505f17" class="outline-2">
+<h2 id="org4505f17"><span class="section-number-2">6</span> CPU温度过高</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 这个问题是我在Ubuntu PC上面遇到的，明显的感觉就是运行速度变慢。然后在syslog里面出现如下日志：
@@ -210,8 +210,8 @@ May  2 18:24:21 umeng-ubuntu-pc kernel: [ 1188.717622] CPU3: Package temperature
 </div>
 </div>
 
-<div id="outline-container-orga880ad9" class="outline-2">
-<h2 id="orga880ad9"><span class="section-number-2">7</span> sync hangup</h2>
+<div id="outline-container-orgcb065fd" class="outline-2">
+<h2 id="orgcb065fd"><span class="section-number-2">7</span> sync hangup</h2>
 <div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li>kill -KILL fails to kill process : <a href="http://lists.freebsd.org/pipermail/freebsd-questions/2008-September/182821.html">http://lists.freebsd.org/pipermail/freebsd-questions/2008-September/182821.html</a></li>
@@ -220,8 +220,8 @@ May  2 18:24:21 umeng-ubuntu-pc kernel: [ 1188.717622] CPU3: Package temperature
 </div>
 </div>
 
-<div id="outline-container-org61f98b4" class="outline-2">
-<h2 id="org61f98b4"><span class="section-number-2">8</span> upgrade glibc</h2>
+<div id="outline-container-orgd96af61" class="outline-2">
+<h2 id="orgd96af61"><span class="section-number-2">8</span> upgrade glibc</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 linux - How to recover after deleting the symbolic link libc.so.6? - Stack Overflow : <a href="http://stackoverflow.com/questions/12249547/how-to-recover-after-deleting-the-symbolic-link-libc-so-6">http://stackoverflow.com/questions/12249547/how-to-recover-after-deleting-the-symbolic-link-libc-so-6</a>
@@ -277,8 +277,8 @@ A copy of the C library was found in an unexpected directory | Blog : <a href="h
 </div>
 </div>
 
-<div id="outline-container-orgf7956a9" class="outline-2">
-<h2 id="orgf7956a9"><span class="section-number-2">9</span> 允许不在tty上执行sudo</h2>
+<div id="outline-container-orgb061942" class="outline-2">
+<h2 id="orgb061942"><span class="section-number-2">9</span> 允许不在tty上执行sudo</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 修改/etc/sudoers文件，注释掉
@@ -289,8 +289,8 @@ Defaults requiretty
 </div>
 </div>
 
-<div id="outline-container-org45df36d" class="outline-2">
-<h2 id="org45df36d"><span class="section-number-2">10</span> ssh proxy</h2>
+<div id="outline-container-org1a1518d" class="outline-2">
+<h2 id="org1a1518d"><span class="section-number-2">10</span> ssh proxy</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 <a href="http://serverfault.com/questions/37629/how-do-i-do-multihop-scp-transfers">http://serverfault.com/questions/37629/how-do-i-do-multihop-scp-transfers</a>
@@ -329,8 +329,8 @@ UPDATE @ 2016-08-26: 发现这个方法可以用来解决remote ipython notebook
 </div>
 </div>
 
-<div id="outline-container-orgb7662fa" class="outline-2">
-<h2 id="orgb7662fa"><span class="section-number-2">11</span> 修改最大打开文件句柄数</h2>
+<div id="outline-container-orgd90fedc" class="outline-2">
+<h2 id="orgd90fedc"><span class="section-number-2">11</span> 修改最大打开文件句柄数</h2>
 <div class="outline-text-2" id="text-11">
 <ul class="org-ul">
 <li><a href="http://blog.csdn.net/superchanon/article/details/13303705">http://blog.csdn.net/superchanon/article/details/13303705</a></li>
@@ -357,8 +357,8 @@ UPDATE @ 2016-08-26: 发现这个方法可以用来解决remote ipython notebook
 </div>
 </div>
 
-<div id="outline-container-org32b4116" class="outline-2">
-<h2 id="org32b4116"><span class="section-number-2">12</span> apt-get hang</h2>
+<div id="outline-container-org430e389" class="outline-2">
+<h2 id="org430e389"><span class="section-number-2">12</span> apt-get hang</h2>
 <div class="outline-text-2" id="text-12">
 <p>
 在使用ubuntu的apt-get时候，可能会出现一些异常的状况，我们直接终止了apt-get。但是这个时候apt-get软件本身出于一个不正常的状态，导致之后不能够启动apt-get。如果观察进程的话会出现下面一些可疑的进程
@@ -380,12 +380,12 @@ dp       30586  0.0  0.0   7628  1020 pts/2    S+   08:59   0:00 grep --color=au
 </ul>
 </div>
 </div>
-<div id="outline-container-org7784c0f" class="outline-2">
-<h2 id="org7784c0f"><span class="section-number-2">13</span> syslog on cpu</h2>
+<div id="outline-container-orgb6e8f24" class="outline-2">
+<h2 id="orgb6e8f24"><span class="section-number-2">13</span> syslog on cpu</h2>
 <div class="outline-text-2" id="text-13">
 </div>
-<div id="outline-container-org02cb2ac" class="outline-3">
-<h3 id="org02cb2ac"><span class="section-number-3">13.1</span> Core power limit notifaction</h3>
+<div id="outline-container-orgba33867" class="outline-3">
+<h3 id="orgba33867"><span class="section-number-3">13.1</span> Core power limit notifaction</h3>
 <div class="outline-text-3" id="text-13-1">
 <pre class="example">
 May 12 12:29:12 dp57 kernel: CPU1: Core power limit notification (total events = 42322)
@@ -408,8 +408,8 @@ May 12 12:29:12 dp57 kernel: CPU31: Core power limit notification (total events 
 </div>
 </div>
 
-<div id="outline-container-org99c9c28" class="outline-3">
-<h3 id="org99c9c28"><span class="section-number-3">13.2</span> Package power limit notification</h3>
+<div id="outline-container-orgb85079c" class="outline-3">
+<h3 id="orgb85079c"><span class="section-number-3">13.2</span> Package power limit notification</h3>
 <div class="outline-text-3" id="text-13-2">
 <pre class="example">
 May 12 12:29:12 dp57 kernel: CPU17: Package power limit notification (total events = 42377)
@@ -432,8 +432,8 @@ May 12 12:29:12 dp57 kernel: CPU1: Package power limit notification (total event
 </div>
 </div>
 
-<div id="outline-container-org67556d7" class="outline-3">
-<h3 id="org67556d7"><span class="section-number-3">13.3</span> below trip temperature. Throttling disabled</h3>
+<div id="outline-container-orgd29546f" class="outline-3">
+<h3 id="orgd29546f"><span class="section-number-3">13.3</span> below trip temperature. Throttling disabled</h3>
 <div class="outline-text-3" id="text-13-3">
 <pre class="example">
 May 12 12:29:40 dp57 mcelog: Processor 17 below trip temperature. Throttling disabled
@@ -472,8 +472,8 @@ May 12 12:29:40 dp57 mcelog: Processor 1 below trip temperature. Throttling disa
 </div>
 </div>
 </div>
-<div id="outline-container-org0cae832" class="outline-2">
-<h2 id="org0cae832"><span class="section-number-2">14</span> linux kernel map</h2>
+<div id="outline-container-org6fde235" class="outline-2">
+<h2 id="org6fde235"><span class="section-number-2">14</span> linux kernel map</h2>
 <div class="outline-text-2" id="text-14">
 
 <div class="figure">
@@ -482,8 +482,8 @@ May 12 12:29:40 dp57 mcelog: Processor 1 below trip temperature. Throttling disa
 </div>
 </div>
 </div>
-<div id="outline-container-org105a3a0" class="outline-2">
-<h2 id="org105a3a0"><span class="section-number-2">15</span> ssh access denied</h2>
+<div id="outline-container-org6d163b0" class="outline-2">
+<h2 id="org6d163b0"><span class="section-number-2">15</span> ssh access denied</h2>
 <div class="outline-text-2" id="text-15">
 <p>
 通常来说access denied主要是因为 ~/.ssh/authorized_keys 里面没有配置公钥，但是也有其他原因比如目录权限等。
