--- a/html/blogs.html
+++ b/html/blogs.html
@@ -16,22 +16,22 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org78deaeb">1. 2019</a></li>
-<li><a href="#org922e5d8">2. 2018</a></li>
-<li><a href="#orge5134c0">3. 2017</a></li>
-<li><a href="#org951f886">4. 2016</a></li>
-<li><a href="#org2493ecb">5. 2015</a></li>
-<li><a href="#orge2b9a15">6. 2014</a></li>
-<li><a href="#org63aa897">7. 2013</a></li>
-<li><a href="#org989b946">8. 2012</a></li>
-<li><a href="#orge8d2bf2">9. misc</a></li>
-<li><a href="#orge28ff8b">10. links</a></li>
+<li><a href="#org2af6720">1. 2019</a></li>
+<li><a href="#orga4a119c">2. 2018</a></li>
+<li><a href="#orge15c63f">3. 2017</a></li>
+<li><a href="#orgd680152">4. 2016</a></li>
+<li><a href="#org7435f9d">5. 2015</a></li>
+<li><a href="#org20d8562">6. 2014</a></li>
+<li><a href="#org52fc994">7. 2013</a></li>
+<li><a href="#org3036ea6">8. 2012</a></li>
+<li><a href="#orgd1c6104">9. misc</a></li>
+<li><a href="#orga1d8ba1">10. links</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org78deaeb" class="outline-2">
-<h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
+<div id="outline-container-org2af6720" class="outline-2">
+<h2 id="org2af6720"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>201904 <a href="polyglot-persistence.html">Polyplot Persistence</a> 混合使用各种存储系统</li>
@@ -49,8 +49,8 @@
 </div>
 </div>
 
-<div id="outline-container-org922e5d8" class="outline-2">
-<h2 id="org922e5d8"><span class="section-number-2">2</span> 2018</h2>
+<div id="outline-container-orga4a119c" class="outline-2">
+<h2 id="orga4a119c"><span class="section-number-2">2</span> 2018</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>201812 <a href="geekbang-recommender-system.html">极客时间|推荐系统36式 文章目录</a></li>
@@ -121,8 +121,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge5134c0" class="outline-2">
-<h2 id="orge5134c0"><span class="section-number-2">3</span> 2017</h2>
+<div id="outline-container-orge15c63f" class="outline-2">
+<h2 id="orge15c63f"><span class="section-number-2">3</span> 2017</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>201712 <a href="geoffrey-hinton-interview-in-coursera.html">Geoffrey Hinton Interview in Coursera</a></li>
@@ -186,8 +186,8 @@
 </div>
 </div>
 
-<div id="outline-container-org951f886" class="outline-2">
-<h2 id="org951f886"><span class="section-number-2">4</span> 2016</h2>
+<div id="outline-container-orgd680152" class="outline-2">
+<h2 id="orgd680152"><span class="section-number-2">4</span> 2016</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>201612 <a href="face-landmark-detection-dlib.html">dlib's face landmark detection</a></li>
@@ -276,8 +276,8 @@
 </div>
 </div>
 
-<div id="outline-container-org2493ecb" class="outline-2">
-<h2 id="org2493ecb"><span class="section-number-2">5</span> 2015</h2>
+<div id="outline-container-org7435f9d" class="outline-2">
+<h2 id="org7435f9d"><span class="section-number-2">5</span> 2015</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li>201512 <a href="ms-presentation.html">Michael Stonebraker Presentation</a></li>
@@ -346,8 +346,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge2b9a15" class="outline-2">
-<h2 id="orge2b9a15"><span class="section-number-2">6</span> 2014</h2>
+<div id="outline-container-org20d8562" class="outline-2">
+<h2 id="org20d8562"><span class="section-number-2">6</span> 2014</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>201412 <a href="the-golden-circle.html">The Golden Circle</a></li>
@@ -368,8 +368,8 @@
 </div>
 </div>
 
-<div id="outline-container-org63aa897" class="outline-2">
-<h2 id="org63aa897"><span class="section-number-2">7</span> 2013</h2>
+<div id="outline-container-org52fc994" class="outline-2">
+<h2 id="org52fc994"><span class="section-number-2">7</span> 2013</h2>
 <div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li>201312 <a href="have-a-nice-sleep-and-straighten-up.html">哪里还有时间去沮丧</a></li>
@@ -395,8 +395,8 @@
 </div>
 </div>
 
-<div id="outline-container-org989b946" class="outline-2">
-<h2 id="org989b946"><span class="section-number-2">8</span> 2012</h2>
+<div id="outline-container-org3036ea6" class="outline-2">
+<h2 id="org3036ea6"><span class="section-number-2">8</span> 2012</h2>
 <div class="outline-text-2" id="text-8">
 <ul class="org-ul">
 <li>201211 <a href="not-easy-as-you-think.html">没有那么简单</a></li>
@@ -424,8 +424,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge8d2bf2" class="outline-2">
-<h2 id="orge8d2bf2"><span class="section-number-2">9</span> misc</h2>
+<div id="outline-container-orgd1c6104" class="outline-2">
+<h2 id="orgd1c6104"><span class="section-number-2">9</span> misc</h2>
 <div class="outline-text-2" id="text-9">
 <ul class="org-ul">
 <li><a href="images/cjy-baidu-blog-archive.html">百度空间存档(baidu space archive)</a></li>
@@ -454,8 +454,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge28ff8b" class="outline-2">
-<h2 id="orge28ff8b"><span class="section-number-2">10</span> links</h2>
+<div id="outline-container-orga1d8ba1" class="outline-2">
+<h2 id="orga1d8ba1"><span class="section-number-2">10</span> links</h2>
 <div class="outline-text-2" id="text-10">
 <p>
 People:
