--- a/html/books.html
+++ b/html/books.html
@@ -16,16 +16,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb213b8b">1. 人物传记</a></li>
-<li><a href="#org4a14a0e">2. 经济，历史，社会</a></li>
-<li><a href="#orge41e173">3. 小说</a></li>
-<li><a href="#org09197cc">4. 个人管理</a></li>
+<li><a href="#org37a5e75">1. 人物传记</a></li>
+<li><a href="#orgdf43ce7">2. 经济，历史，社会</a></li>
+<li><a href="#org7b56c54">3. 小说</a></li>
+<li><a href="#org329f40c">4. 个人管理</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgb213b8b" class="outline-2">
-<h2 id="orgb213b8b"><span class="section-number-2">1</span> 人物传记</h2>
+<div id="outline-container-org37a5e75" class="outline-2">
+<h2 id="org37a5e75"><span class="section-number-2">1</span> 人物传记</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="steve-jobs.html">史蒂夫乔布斯传(Steve Jobs)</a></li>
@@ -40,8 +40,8 @@
 </div>
 </div>
 
-<div id="outline-container-org4a14a0e" class="outline-2">
-<h2 id="org4a14a0e"><span class="section-number-2">2</span> 经济，历史，社会</h2>
+<div id="outline-container-orgdf43ce7" class="outline-2">
+<h2 id="orgdf43ce7"><span class="section-number-2">2</span> 经济，历史，社会</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="a-chronicle-of-tencent.html">腾讯传</a> by 吴晓波</li>
@@ -83,8 +83,8 @@
 </div>
 </div>
 
-<div id="outline-container-orge41e173" class="outline-2">
-<h2 id="orge41e173"><span class="section-number-2">3</span> 小说</h2>
+<div id="outline-container-org7b56c54" class="outline-2">
+<h2 id="org7b56c54"><span class="section-number-2">3</span> 小说</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="the-catcher-in-the-rye.html">麦田里的守望者(The Catcher in The Rye)</a> by Jerome Salinger</li>
@@ -104,8 +104,8 @@
 </div>
 </div>
 
-<div id="outline-container-org09197cc" class="outline-2">
-<h2 id="org09197cc"><span class="section-number-2">4</span> 个人管理</h2>
+<div id="outline-container-org329f40c" class="outline-2">
+<h2 id="org329f40c"><span class="section-number-2">4</span> 个人管理</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="principles.html">原则(Principles)</a> by Ray Dalio</li>
