--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,11 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+在故宫走丢真是倍儿有面子，全紫禁城开始广播“请xxx听到广播后到乾清宫”，好像被皇上召见一样[doge]
+</p>
+
+<hr />
+<p>
 <a href="https://www.weibo.com/1834459124/H6nD3AtS5?ref=collection">https://www.weibo.com/1834459124/H6nD3AtS5?ref=collection</a>
 </p>
 
