[R] publish org files

--- a/html/apply-visa-for-usa.html
+++ b/html/apply-visa-for-usa.html
@@ -46,6 +46,14 @@
 <li>请携带单位开具的就职证明以及最近三个月的工资单。</li>
 </ul>
 
+<p>
+在职人员: 请携带单位开具的就职证明以及最近三个月的工资单。
+</p>
+
+<p>
+企业家和公司高管: 请携带所在公司的职位证明以及薪酬证明。
+</p>
+
 <hr />
 
 <p>
