--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,6 +34,8 @@
 <h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201905 <a href="joe-duffy-software-leadership-series.html">Joe Duffy's Software Leadership Series</a></li>
+<li>201905 <a href="keynes-vs-hayek.html">凯恩斯大战哈耶克</a></li>
 <li>201905 <a href="codehaus-manifesto.html">Codehaus宣言</a></li>
 <li>201905 <a href="logrotate-conf-for-nginx.html">nginx正确的logrotate配置</a></li>
 <li>201904 <a href="poission-distribution-in-bitcoin-mining.html">比特币挖矿的泊松分布问题</a></li>
