[R] publish org files

--- a/html/paste.html
+++ b/html/paste.html
@@ -14,6 +14,23 @@
 <h1 class="title">Paste</h1>
 <hr />
 <p>
+<a href="https://weibo.com/6375760521/HuJ2BzAa3">https://weibo.com/6375760521/HuJ2BzAa3</a>
+</p>
+
+<p>
+仔细观察过，articulate和aware真是美国职场吹捧里最值得让人相信的两个词。能用上这两个词，通常都是在你业务技能没得说的基础上，做事的风格流畅到恨不得同事『晚上下班后背着你，都还要在吃饭时跟老婆/老公/孩子面前提到你，把你夸一遍』的那种程度。Articulate是一种超越了表达能力的表达能力，而aware也是一种超越了共情能力的共情能力。入职两三年的年轻人，要是能被见多识广的老油条们夸这俩词，感觉之后怕是要做director/VP甚至更高的料了，好多现实的例子可以佐证这一点。
+</p>
+
+<p>
+稍微次一点的词大概是empathetic, collaborative, or talented，听了也不错，至少你让人看到了优点。最不想听到的夸奖词是hardworking, 还有什么prolific/productive，几乎等于相亲见第一面，对方捧了你半天，你实在找不到夸ta的，只能憋出一个：“我觉得你的粉底很服贴诶，一点都不卡粉”。
+</p>
+
+<p>
+Awesome, interesting和smart就不要来了，在加州马上要不算职场夸人的词了
+</p>
+
+<hr />
+<p>
 <a href="https://github.com/oldratlee/translations/blob/master/codehaus-manifesto/README.md">https://github.com/oldratlee/translations/blob/master/codehaus-manifesto/README.md</a>
 </p>
 
