--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,6 +34,8 @@
 <h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201905 <a href="javascript-prototype-chain-tests.html">JavaScript原型链测试代码</a></li>
+<li>201905 <a href="javascript-the-good-parts.html">JavaScript语言精粹</a></li>
 <li>201905 <a href="joe-duffy-software-leadership-series.html">Joe Duffy's Software Leadership Series</a></li>
 <li>201905 <a href="keynes-vs-hayek.html">凯恩斯大战哈耶克</a></li>
 <li>201905 <a href="codehaus-manifesto.html">Codehaus宣言</a></li>
