--- a/html/index-pl.html
+++ b/html/index-pl.html
@@ -13,27 +13,16 @@
 <div id="content">
 <h1 class="title">程序设计语言 Programming Language</h1>
 <ul class="org-ul">
-<li><a href="thoughts-on-prog-lang.html">thoughts on programming language</a>
-<ul class="org-ul">
-<li>compiler course <a href="images/compiler-cs143.pdf">cs143</a>(<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/cs143/">code</a>)</li>
-<li><a href="continuation.html">continuation</a></li>
-<li><a href="build-system.html">build-system</a> 在实现Baidu in-house的构建工具 <a href="http://wenku.baidu.com/view/19f3d535284ac850ad0242cc.html">comake2</a> 之前做的构建系统调研总结.</li>
-<li><a href="swig.html">swig</a> C/C++多语言扩展接口生成器. 使用起来非常方便, 但是本身不太完善, 比较适合用于原型系统.</li>
-</ul></li>
-</ul>
-
-
-<ul class="org-ul">
 <li><a href="cpp.html">C/C++</a>
 <ul class="org-ul">
 <li><a href="guide-to-advanced-programming-in-c.html">Guide to Advanced Programming in C</a></li>
 <li><a href="the-cpp-prog-lang.html">The C++ Programming Language</a></li>
 </ul></li>
-<li><a href="scheme.html">Scheme</a> <a href="http://www.schemers.org/">official site</a>
+<li><a href="scheme.html">Scheme</a>
 <ul class="org-ul">
 <li><a href="the-little-schemer.html">The Little Schemer</a></li>
 <li><a href="the-seasoned-schemer.html">The Seasoned Schemer</a></li>
-<li><a href="sicp.html">SICP = Structure and Interpretation of Computer Programs</a></li>
+<li><a href="sicp.html">SICP/Structure and Interpretation of Computer Programs</a></li>
 </ul></li>
 <li><a href="java.html">Java</a>
 <ul class="org-ul">
@@ -53,9 +42,34 @@
 <li><a href="go-lang-book.html">Go语言编程</a> by 许式伟，吕桂华</li>
 <li><a href="go-course-day.html">Go Course Day</a> by Robe Pike</li>
 </ul></li>
-<li><a href="scala.html">Scala</a> (<a href="effective-scala.html">Effective Scala</a>) (<a href="images/coursera-fpps-2013.pdf">Coursera: FP in Scala</a>)</li>
-<li><a href="erlang.html">Erlang</a> (<a href="erlang-prog-lang-book.html">Erlang程序设计</a>)</li>
-<li><a href="lua.html">Lua</a> (<a href="lua-prog-lang-book.html">Lua程序设计</a> by Robert 译 周惟迪) <a href="openresty-best-practices-lua.html">OpenResty最佳实践/Lua</a></li>
+<li><a href="scala.html">Scala</a>
+<ul class="org-ul">
+<li><a href="scala-prog-lang-book.html">Scala程序设计</a></li>
+<li><a href="effective-scala.html">Effective Scala</a></li>
+<li><a href="images/coursera-fpps-2013.pdf">Coursera: FP in Scala</a></li>
+</ul></li>
+<li><a href="erlang.html">Erlang</a>
+<ul class="org-ul">
+<li><a href="erlang-prog-lang-book.html">Erlang程序设计</a></li>
+</ul></li>
+<li><a href="lua.html">Lua</a>
+<ul class="org-ul">
+<li><a href="lua-prog-lang-book.html">Lua程序设计</a> by Robert 译 周惟迪</li>
+<li><a href="openresty-best-practices-lua.html">OpenResty最佳实践/Lua</a></li>
+</ul></li>
+<li>JavaScript
+<ul class="org-ul">
+<li>201905 <a href="javascript-prototype-chain-tests.html">JavaScript原型链测试代码</a></li>
+<li>201905 <a href="javascript-the-good-parts.html">JavaScript语言精粹</a></li>
+</ul></li>
+<li>misc
+<ul class="org-ul">
+<li><a href="thoughts-on-prog-lang.html">thoughts on programming language</a></li>
+<li>compiler course <a href="images/compiler-cs143.pdf">cs143</a>(<a href="https://github.com/dirtysalt/dirtysalt.github.io/tree/master/codes/cc/cs143/">code</a>)</li>
+<li><a href="continuation.html">continuation</a></li>
+<li><a href="build-system.html">build-system</a> 在实现Baidu in-house的构建工具 <a href="http://wenku.baidu.com/view/19f3d535284ac850ad0242cc.html">comake2</a> 之前做的构建系统调研总结.</li>
+<li><a href="swig.html">swig</a> C/C++多语言扩展接口生成器. 使用起来非常方便, 但是本身不太完善, 比较适合用于原型系统.</li>
+</ul></li>
 </ul>
 </div>
 <div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/index-pl.html';this.page.identifier = 'index-pl.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
