--- a/html/scheme.html
+++ b/html/scheme.html
@@ -13,6 +13,7 @@
 <div id="content">
 <h1 class="title">scheme</h1>
 <ul class="org-ul">
+<li><a href="https://schemers.org/">https://schemers.org/</a></li>
 <li><a href="http://www.scheme.com/">http://www.scheme.com/</a></li>
 <li>SICP <a href="http://mitpress.mit.edu/sicp/">http://mitpress.mit.edu/sicp/</a></li>
 <li>TSPL <a href="http://www.scheme.com/tspl4/">http://www.scheme.com/tspl4/</a></li>
