--- a/html/index-sd.html
+++ b/html/index-sd.html
@@ -16,16 +16,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orge8e43ee">1. Blogs</a></li>
-<li><a href="#org7ed1f0a">2. Books</a></li>
+<li><a href="#org7a445af">1. Blogs</a></li>
+<li><a href="#orgd4fe793">2. Books</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orge8e43ee" class="outline-2">
-<h2 id="orge8e43ee"><span class="section-number-2">1</span> Blogs</h2>
+<div id="outline-container-org7a445af" class="outline-2">
+<h2 id="org7a445af"><span class="section-number-2">1</span> Blogs</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201905 <a href="12-classic-mistakes.html">12个软件工程经典错误</a></li>
+<li>201905 <a href="joe-duffy-software-leadership-series.html">Joe Duffy's Software Leadership Series</a></li>
+<li>201905 <a href="codehaus-manifesto.html">Codehaus宣言</a></li>
+<li>201904 <a href="polyglot-persistence.html">Polyplot Persistence</a> 混合使用各种存储系统</li>
+<li>201903 <a href="strangler-application.html">StranglerApplication</a> 扼杀者应用（如何有效安全地替换掉老的应用）</li>
+<li>201903 <a href="instagram-under-the-hood.html">Instagram Under the Hood</a></li>
+<li>201901 <a href="instagram-engineering-3-rules-to-a-scalable-cloud-application-architecture.html">Instagram Engineering’s 3 rules to a scalable cloud application architecture</a></li>
+<li>201811 <a href="whats-the-largest-amount-of-bad-code-you-have-ever-seen-work.html">{Ask HN}What's the largest amount of bad code you have ever seen work?</a></li>
+<li>201811 <a href="keras-author-on-software-engineering.html">Keras之父写给年轻程序员的33条忠告</a></li>
+<li>201810 <a href="writing-system-software-code-comments.html">Writing system software: code comments</a></li>
 <li>201810 <a href="github-flow.html">GitHub Flow</a></li>
 <li>201810 <a href="whats-a-senior-engineers-job.html">What's a senior engineer's job?</a></li>
 <li>201808 <a href="youtube-scalability.html">YouTube Scalability</a> on youtube</li>
@@ -138,8 +148,8 @@
 </div>
 </div>
 
-<div id="outline-container-org7ed1f0a" class="outline-2">
-<h2 id="org7ed1f0a"><span class="section-number-2">2</span> Books</h2>
+<div id="outline-container-orgd4fe793" class="outline-2">
+<h2 id="orgd4fe793"><span class="section-number-2">2</span> Books</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="design-reading.html">Design Reading</a> 软件设计方面的一些文章</li>
