--- a/html/erlang-prog-lang-book.html
+++ b/html/erlang-prog-lang-book.html
@@ -38,18 +38,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgda1d160">1. 如何启动</a></li>
-<li><a href="#org00419ae">2. 数据类型</a></li>
-<li><a href="#org116cca2">3. 控制结构</a></li>
-<li><a href="#orgd868aaa">4. 文件属性</a></li>
-<li><a href="#org618efe7">5. 并发编程</a></li>
-<li><a href="#orgffd384a">6. 其他特性</a></li>
+<li><a href="#orgad04b36">1. 如何启动</a></li>
+<li><a href="#org8393ef5">2. 数据类型</a></li>
+<li><a href="#orgdbbf937">3. 控制结构</a></li>
+<li><a href="#org66f00e2">4. 文件属性</a></li>
+<li><a href="#orgf1b6151">5. 并发编程</a></li>
+<li><a href="#org142a79e">6. 其他特性</a></li>
+<li><a href="#orgd4018e7">7. 错误处理</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgda1d160" class="outline-2">
-<h2 id="orgda1d160"><span class="section-number-2">1</span> 如何启动</h2>
+<div id="outline-container-orgad04b36" class="outline-2">
+<h2 id="orgad04b36"><span class="section-number-2">1</span> 如何启动</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 通常erlang源代码会保存为.erl文件，但是也有.hrl文件（和C的header文件类似），erlang编译器也使用了宏和预处理机制来处理代码。
@@ -82,8 +83,8 @@ P = 1, Q = 2ok
 </div>
 </div>
 
-<div id="outline-container-org00419ae" class="outline-2">
-<h2 id="org00419ae"><span class="section-number-2">2</span> 数据类型</h2>
+<div id="outline-container-org8393ef5" class="outline-2">
+<h2 id="org8393ef5"><span class="section-number-2">2</span> 数据类型</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 首先erlang里面需要恰当使用逗号(,), 分号(;) 和句号(;). 大致逻辑是这样的
@@ -134,13 +135,13 @@ P = 1, Q = 2ok
 </p>
 
 <p>
-二进制(binary). 和C的struct有点类似，<a id="org43f3b47"></a>表示有三个字段顺序排列，当然也可以为里面每个字段设置bit size, 以及type还有endian等。erlang的二进制比较强大的地方是，可以很容易地充分利用模式匹配这个功能。
+二进制(binary). 和C的struct有点类似，<a id="org4f6764e"></a>表示有三个字段顺序排列，当然也可以为里面每个字段设置bit size, 以及type还有endian等。erlang的二进制比较强大的地方是，可以很容易地充分利用模式匹配这个功能。
 </p>
 </div>
 </div>
 
-<div id="outline-container-org116cca2" class="outline-2">
-<h2 id="org116cca2"><span class="section-number-2">3</span> 控制结构</h2>
+<div id="outline-container-orgdbbf937" class="outline-2">
+<h2 id="orgdbbf937"><span class="section-number-2">3</span> 控制结构</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 函数定义. 可以看到函数定义也有点类似模式匹配，可以列举各种模式来决定执行行为
@@ -224,8 +225,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-orgd868aaa" class="outline-2">
-<h2 id="orgd868aaa"><span class="section-number-2">4</span> 文件属性</h2>
+<div id="outline-container-org66f00e2" class="outline-2">
+<h2 id="org66f00e2"><span class="section-number-2">4</span> 文件属性</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 属性语法类似于 -SomeTag(&#x2026;) , 分为预定义属性和自定义属性。预定义的属性有
@@ -244,8 +245,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-org618efe7" class="outline-2">
-<h2 id="org618efe7"><span class="section-number-2">5</span> 并发编程</h2>
+<div id="outline-container-orgf1b6151" class="outline-2">
+<h2 id="orgf1b6151"><span class="section-number-2">5</span> 并发编程</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 通过spawn函数来创建线程，返回一个线程句柄（通常命名为Pid），之后可以往这个线程投递消息，比如 <code>Pid ! hello</code> 。
@@ -262,8 +263,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-orgffd384a" class="outline-2">
-<h2 id="orgffd384a"><span class="section-number-2">6</span> 其他特性</h2>
+<div id="outline-container-org142a79e" class="outline-2">
+<h2 id="org142a79e"><span class="section-number-2">6</span> 其他特性</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>类型推断和类型检查。 用户可以提供spec来帮助erlang来检查类型错误，两个程序dialyzer和typer</li>
@@ -271,6 +272,43 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 <li>性能分析，调试和跟踪工具。</li>
 <li>动态代码载入。在任一时刻，Erlang允许一个模块的两个版本同时运行，重新编译某个模块代码，当前版成为旧版本。两个版本的代码可以同时运行。</li>
 </ul>
+</div>
+</div>
+
+<div id="outline-container-orgd4018e7" class="outline-2">
+<h2 id="orgd4018e7"><span class="section-number-2">7</span> 错误处理</h2>
+<div class="outline-text-2" id="text-7">
+<p>
+如果你来自c这样的语言，这听起来会非常奇怪。在c里我们被教导要编写预防性代码，程序应当检查它们的参数以避免崩溃。在c里这么做很有必要：编写多进程代码极其困难，而且绝大多数应用程序只有一个进程，所以如果这个进程让整个应用程序崩溃，麻烦可就大了。这意味着需要大量的错误检查代码，他们会和非错误检查代码交织在一起。
+</p>
+
+<p>
+在erlang，我们所做的恰恰相反。我们会把应用程序构建成两个部分：一部分负责解决问题，另外一部分负责在错误时纠正他们。负责解决问题的部分会尽可能的少用防御性代码，并假设函数的所有参数都是正确的，程序也会正常运行。纠正错误的部分往往是通用的，因此同一段错误纠正代码可以用在许多不同的应用程序里。举一个例子，如果数据库的某个事物出了错，就应当简单地中止该事务，让系统把数据库恢复到出错之前的状态。如果操作系统里某个进程崩溃了，就让操作系统关闭所有打开的文件或套接字，然后让系统恢复到某个稳定状态。
+</p>
+
+<p>
+这么做让任务有了清楚的区分，编写解决问题的代码和错误修复的代码，让两者不会交织在一起，代码的体积可能会因此显著变小。
+</p>
+
+<p>
+让程序在出错时立即崩溃，通常是一个很好的主意，事实上他有不少优点：
+</p>
+<ol class="org-ol">
+<li>不必编写防御性代码来防止错误，直接崩溃就好。</li>
+<li>不必思考应对措施，而是选择直接崩溃，别人会来修复这个错误。</li>
+<li>不会使错误恶化，因为无需在知道出错后进行额外的计算。</li>
+<li>如果在错误发生后，第一时间举旗示意，就能得到非常好的错误诊断，在错误发生后继续运行，经常会导致更多错误发生，让调试变得更加困难。</li>
+<li>并且错误恢复代码时，不用担心崩溃的原因，只需要把注意力放在事后清理上。</li>
+<li>它简化了系统架构，这样我们就能把应用程序和错误恢复当成两个独立的问题来思考，而不是一个交叉的问题。</li>
+</ol>
+
+<p>
+<b>找其他人修复：</b>
+</p>
+
+<p>
+别人来修复某个错误，而不是自己动手，是个不错的主意，它能够促进专业化。如果我需要做手术，就会去找大夫，而不是尝试自己操作。如果我的汽车出了点小问题，车上的控制电脑会尝试修复它，如果修复失败，问题会变得更加棘手，就必须把车拉到修理厂，让其他的人来修理。如果erlang进程出了点小问题，可以尝试用try/catch来修复它，但如果修复失败，就应该直接崩溃，让其他进程来修复这个错误。
+</p>
 </div>
 </div>
 </div>
