[R] publish org files

--- a/html/continuation.html
+++ b/html/continuation.html
@@ -17,6 +17,10 @@
 <li><a href="http://www.ps.uni-saarland.de/~duchier/python/continuations.html">Continuations Made Simple and Illustrated</a></li>
 <li><a href="http://library.readscheme.org/page6.html">Continuations and Continuation Passing Style</a></li>
 <li><a href="the-little-schemer.html">The Little Schemer</a> 里面有一些关于continuation/CPS的内容</li>
+<li><a href="https://www.sczyh30.com/posts/Functional-Programming/call-with-current-continuation/">https://www.sczyh30.com/posts/Functional-Programming/call-with-current-continuation/</a></li>
+<li><a href="https://ds26gte.github.io/tyscheme/index-Z-H-15.html">https://ds26gte.github.io/tyscheme/index-Z-H-15.html</a></li>
+<li><a href="https://dkandalov.github.io/call-with-current-continuation">https://dkandalov.github.io/call-with-current-continuation</a></li>
+<li><a href="http://www.madore.org/~david/computers/callcc.html">http://www.madore.org/~david/computers/callcc.html</a></li>
 </ul>
 </div>
 <div id="content"><!-- DISQUS BEGIN --><div id="disqus_thread"></div><script>/***  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/var disqus_config = function () {this.page.url = 'https://dirtysalt.github.io/html/continuation.html';this.page.identifier = 'continuation.html';};(function() {var d = document, s = d.createElement('script');s.src = 'https://dirlt.disqus.com/embed.js';s.setAttribute('data-timestamp', +new Date());(d.head || d.body).appendChild(s);})();</script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript><!-- DISQUS END --></div></body>
