[R] publish org files

--- a/html/go-lang-book.html
+++ b/html/go-lang-book.html
@@ -16,16 +16,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd722425">1. 顺序编程</a></li>
-<li><a href="#org181926f">2. 类型系统</a></li>
-<li><a href="#org47c85f5">3. 并发编程</a></li>
-<li><a href="#orgb158a58">4. 工程管理</a></li>
+<li><a href="#org73acda3">1. 顺序编程</a></li>
+<li><a href="#orga212085">2. 类型系统</a></li>
+<li><a href="#org4fe11a3">3. 并发编程</a></li>
+<li><a href="#org3e7706d">4. 工程管理</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgd722425" class="outline-2">
-<h2 id="orgd722425"><span class="section-number-2">1</span> 顺序编程</h2>
+<div id="outline-container-org73acda3" class="outline-2">
+<h2 id="org73acda3"><span class="section-number-2">1</span> 顺序编程</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>有限的类型推导
@@ -63,8 +63,8 @@
 </div>
 </div>
 
-<div id="outline-container-org181926f" class="outline-2">
-<h2 id="org181926f"><span class="section-number-2">2</span> 类型系统</h2>
+<div id="outline-container-orga212085" class="outline-2">
+<h2 id="orga212085"><span class="section-number-2">2</span> 类型系统</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li>值语义 vs. 引用语义
@@ -103,8 +103,8 @@
 </div>
 </div>
 
-<div id="outline-container-org47c85f5" class="outline-2">
-<h2 id="org47c85f5"><span class="section-number-2">3</span> 并发编程</h2>
+<div id="outline-container-org4fe11a3" class="outline-2">
+<h2 id="org4fe11a3"><span class="section-number-2">3</span> 并发编程</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>goroutine go协程 see libtask
@@ -131,8 +131,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb158a58" class="outline-2">
-<h2 id="orgb158a58"><span class="section-number-2">4</span> 工程管理</h2>
+<div id="outline-container-org3e7706d" class="outline-2">
+<h2 id="org3e7706d"><span class="section-number-2">4</span> 工程管理</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>目录组织. src/pkg/bin</li>
