--- a/html/erlang-prog-lang-book.html
+++ b/html/erlang-prog-lang-book.html
@@ -38,19 +38,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgad04b36">1. 如何启动</a></li>
-<li><a href="#org8393ef5">2. 数据类型</a></li>
-<li><a href="#orgdbbf937">3. 控制结构</a></li>
-<li><a href="#org66f00e2">4. 文件属性</a></li>
-<li><a href="#orgf1b6151">5. 并发编程</a></li>
-<li><a href="#org142a79e">6. 其他特性</a></li>
-<li><a href="#orgd4018e7">7. 错误处理</a></li>
+<li><a href="#orgda1d160">1. 如何启动</a></li>
+<li><a href="#org00419ae">2. 数据类型</a></li>
+<li><a href="#org116cca2">3. 控制结构</a></li>
+<li><a href="#orgd868aaa">4. 文件属性</a></li>
+<li><a href="#org618efe7">5. 并发编程</a></li>
+<li><a href="#orgffd384a">6. 其他特性</a></li>
+<li><a href="#org149da23">7. 错误处理</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgad04b36" class="outline-2">
-<h2 id="orgad04b36"><span class="section-number-2">1</span> 如何启动</h2>
+<div id="outline-container-orgda1d160" class="outline-2">
+<h2 id="orgda1d160"><span class="section-number-2">1</span> 如何启动</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 通常erlang源代码会保存为.erl文件，但是也有.hrl文件（和C的header文件类似），erlang编译器也使用了宏和预处理机制来处理代码。
@@ -83,8 +83,8 @@ P = 1, Q = 2ok
 </div>
 </div>
 
-<div id="outline-container-org8393ef5" class="outline-2">
-<h2 id="org8393ef5"><span class="section-number-2">2</span> 数据类型</h2>
+<div id="outline-container-org00419ae" class="outline-2">
+<h2 id="org00419ae"><span class="section-number-2">2</span> 数据类型</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 首先erlang里面需要恰当使用逗号(,), 分号(;) 和句号(;). 大致逻辑是这样的
@@ -135,13 +135,13 @@ P = 1, Q = 2ok
 </p>
 
 <p>
-二进制(binary). 和C的struct有点类似，<a id="org4f6764e"></a>表示有三个字段顺序排列，当然也可以为里面每个字段设置bit size, 以及type还有endian等。erlang的二进制比较强大的地方是，可以很容易地充分利用模式匹配这个功能。
+二进制(binary). 和C的struct有点类似，<a id="org43f3b47"></a>表示有三个字段顺序排列，当然也可以为里面每个字段设置bit size, 以及type还有endian等。erlang的二进制比较强大的地方是，可以很容易地充分利用模式匹配这个功能。
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgdbbf937" class="outline-2">
-<h2 id="orgdbbf937"><span class="section-number-2">3</span> 控制结构</h2>
+<div id="outline-container-org116cca2" class="outline-2">
+<h2 id="org116cca2"><span class="section-number-2">3</span> 控制结构</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 函数定义. 可以看到函数定义也有点类似模式匹配，可以列举各种模式来决定执行行为
@@ -225,8 +225,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-org66f00e2" class="outline-2">
-<h2 id="org66f00e2"><span class="section-number-2">4</span> 文件属性</h2>
+<div id="outline-container-orgd868aaa" class="outline-2">
+<h2 id="orgd868aaa"><span class="section-number-2">4</span> 文件属性</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 属性语法类似于 -SomeTag(&#x2026;) , 分为预定义属性和自定义属性。预定义的属性有
@@ -245,8 +245,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-orgf1b6151" class="outline-2">
-<h2 id="orgf1b6151"><span class="section-number-2">5</span> 并发编程</h2>
+<div id="outline-container-org618efe7" class="outline-2">
+<h2 id="org618efe7"><span class="section-number-2">5</span> 并发编程</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 通过spawn函数来创建线程，返回一个线程句柄（通常命名为Pid），之后可以往这个线程投递消息，比如 <code>Pid ! hello</code> 。
@@ -263,8 +263,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-org142a79e" class="outline-2">
-<h2 id="org142a79e"><span class="section-number-2">6</span> 其他特性</h2>
+<div id="outline-container-orgffd384a" class="outline-2">
+<h2 id="orgffd384a"><span class="section-number-2">6</span> 其他特性</h2>
 <div class="outline-text-2" id="text-6">
 <ul class="org-ul">
 <li>类型推断和类型检查。 用户可以提供spec来帮助erlang来检查类型错误，两个程序dialyzer和typer</li>
@@ -275,8 +275,8 @@ func1([{tag, {one, A} = Z1, B} = Z2 | T]) -&gt;
 </div>
 </div>
 
-<div id="outline-container-orgd4018e7" class="outline-2">
-<h2 id="orgd4018e7"><span class="section-number-2">7</span> 错误处理</h2>
+<div id="outline-container-org149da23" class="outline-2">
+<h2 id="org149da23"><span class="section-number-2">7</span> 错误处理</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 如果你来自c这样的语言，这听起来会非常奇怪。在c里我们被教导要编写预防性代码，程序应当检查它们的参数以避免崩溃。在c里这么做很有必要：编写多进程代码极其困难，而且绝大多数应用程序只有一个进程，所以如果这个进程让整个应用程序崩溃，麻烦可就大了。这意味着需要大量的错误检查代码，他们会和非错误检查代码交织在一起。
