--- a/html/python.html
+++ b/html/python.html
@@ -58,7 +58,7 @@
 <li><a href="http://pythonguidecn.readthedocs.io/zh/latest/index.html">Python最佳实践指南</a></li>
 <li><a href="images/the-django-book/index.html">The Django Book</a> 不错的Django入门材料</li>
 </ul></li>
-<li>vm
+<li>cpython
 <ul class="org-ul">
 <li><a href="http://pgbovine.net/cpython-internals.htm">Philip Guo - CPython internals: A ten-hour codewalk through the Python interpreter source code</a></li>
 <li><a href="https://www.youtube.com/watch?v=HVUTjQzESeo">Allison Kaptur - Bytes in the Machine: Inside the CPython interpreter - PyCon 2015 - YouTube</a></li>
