[R] publish org files

--- a/html/blogs.html
+++ b/html/blogs.html
@@ -34,6 +34,7 @@
 <h2 id="org78deaeb"><span class="section-number-2">1</span> 2019</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
+<li>201906 <a href="a-page-about-call-cc.html">A page about call/cc</a></li>
 <li>201905 <a href="bayesian-methods-for-hackers.html">Bayesian Methods for Hackers</a></li>
 <li>201905 <a href="python-thread-safe-complaint.html">Python线程安全的抱怨</a></li>
 <li>201905 <a href="12-classic-mistakes.html">12个软件工程经典错误</a></li>
